--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
@@ -113,7 +113,7 @@
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let loan">
-                        <span (click)="viewLoan(loan)" class="kt-pointer" *ngxPermissionsOnly="['loanDetailsView']">
+                        <span (click)="viewLoan(loan)" class="kt-pointer" *ngxPermissionsOnly="['loanDetailsView','appliedLoanView']">
                             View
                         </span>
                     </mat-cell>
