--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -145,9 +145,9 @@
                             </td>
                             <td class="rating-cce">
                                 <select class="form-control " formControlName="loanStatusForAppraiser"
-                                    (change)="statusAppraiser()"
+                                    (change)="resetAppraiser();statusAppraiser()"
                                     [class.isError]="controls.loanStatusForAppraiser.invalid && controls.loanStatusForAppraiser.touched">
-                                    <option [value]="" [disabled]="true" [selected]="true">Select Status</option>
+                                    <option value=null [disabled]="true" [selected]="true">Select Status</option>
                                     <option [value]="status.value" *ngFor="let status of appraiser">
                                         {{status.name | titlecase}}
                                     </option>
@@ -157,7 +157,7 @@
                                     Field Required</mat-error>
                             </td>
                             <td class="rating-bm" *ngIf="viewBMForm || url == 'view-loan'">
-                                <select class="form-control" formControlName="loanStatusForBM" (change)="statusBM()"
+                                <select class="form-control" formControlName="loanStatusForBM" (change)="resetBM();statusBM()"
                                     [class.isError]="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
                                     <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
                                     <option [value]="status.value" *ngFor="let status of branchManager">
