ui fixes, bug fixes, cancel button

--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -148,6 +148,15 @@
                         {{element['orderCurrentStatus.statusName'] ? (element['orderCurrentStatus.statusName'] | titlecase) : '-'}}
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="cancelOrder">
+                    <mat-header-cell *matHeaderCellDef>Cancel Order</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <span
+                            *ngIf="element['orderCurrentStatus.id'] == 2 || element['orderCurrentStatus.id'] == 3 || element['orderCurrentStatus.id'] == 11">
+                            <kt-button [value]="'Cancel'" [type]="'submit'" (click)="cancelOrder(element)"></kt-button>
+                        </span>
+                    </mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="merchant">
                     <mat-header-cell *matHeaderCellDef>Merchant</mat-header-cell>
                     <mat-cell *matCellDef="let element">
