--- a/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
+++ b/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
@@ -96,10 +96,10 @@
 
 	<!-- if menu item using bullet -->
 	<i *ngIf="parentItem && parentItem.bullet === 'dot'" class="kt-menu__link-bullet kt-menu__link-bullet--dot">
-		<span></span>
+		<span class="bgColor"></span>
 	</i>
 	<i *ngIf="parentItem && parentItem.bullet === 'line'" class="kt-menu__link-bullet kt-menu__link-bullet--line">
-		<span></span>
+		<span class="bgColor"></span>
 	</i>
 
 	<!-- menu item title text -->
