--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-cancel-dialog/order-cancel-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-cancel-dialog/order-cancel-dialog.component.html
@@ -5,6 +5,107 @@
         <div class="row justify-content-center scroll kt-padding-t-10 kt-padding-b-10">
             <div class="col-6">
                 <form [formGroup]="cancelForm">
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Store Id</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="storeId" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Order Id</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="orderId" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">User Id</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="userId" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Customer Name</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="customerName" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Mobile Number</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="mobileNumber" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Booking Price</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="bookingPrice" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Total Amt. Paid</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="totalAmt" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Cancellation Price of Order</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="cancellationPrice" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Difference Amt.</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="differenceAmt" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-padding-t-15">
+                        <div class="col-5 align-self-center">
+                            <label [class.mandatory]="isMandatory">Cancellation Charges</label>
+                        </div>
+                        <div class="col-7">
+                            <input class="form-control" formControlName="cancellationCharges" type="text" numbersOnly
+                                [class.isError]="controls.cancellationCharges.touched && controls.cancellationCharges.invalid">
+                            <mat-error
+                                *ngIf="controls.cancellationCharges.errors?.required && controls.cancellationCharges.touched">
+                                Required field
+                            </mat-error>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Total Cancellation Charges</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="totalCancellationCharges" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color">Amount Payable to Customer</label>
+                        </div>
+                        <div class="col-7">
+                            <input type="text" formControlName="amtPayable" class="form-control" disabled>
+                        </div>
+                    </div>
                     <div class="row kt-padding-t-15">
                         <div class="col-5 align-self-center">
                             <label [class.mandatory]="isMandatory">Bank Name</label>
@@ -43,19 +144,6 @@
                             </mat-error>
                         </div>
                     </div>
-                    <div class="row kt-padding-t-15">
-                        <div class="col-5 align-self-center">
-                            <label [class.mandatory]="isMandatory">Cancellation Charges</label>
-                        </div>
-                        <div class="col-7">
-                            <input class="form-control" formControlName="cancellationCharges" type="text" numbersOnly
-                                [class.isError]="controls.cancellationCharges.touched && controls.cancellationCharges.invalid">
-                            <mat-error
-                                *ngIf="controls.cancellationCharges.errors?.required && controls.cancellationCharges.touched">
-                                Required field
-                            </mat-error>
-                        </div>
-                    </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-5 align-self-center">
                             <label class="font-weight-500 text-color">Passbook Copy</label>
@@ -88,6 +176,23 @@
                                 <mat-error
                                     *ngIf="controls.checkCopyId.touched && controls.checkCopyId.errors?.required">
                                     Check Copy is required</mat-error>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-5 align-self-center">
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Status</label>
+                        </div>
+                        <div class="col-7">
+                            <select class="form-control" formControlName="status"
+                                [class.isError]="controls.status.touched && controls.status.invalid">
+                                <option value="" [selected]="true" [disabled]="true">Select Status</option>
+                                <option [value]="cancelData?.nextStatus.statusId">
+                                    {{cancelData?.nextStatus.statusName | titlecase}}</option>
+                            </select>
+                            <div *ngIf="controls.status.touched && controls.status.invalid">
+                                <mat-error *ngIf="controls.status.touched && controls.status.errors?.required">
+                                    Field is required</mat-error>
                             </div>
                         </div>
                     </div>
