--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-cancel-dialog/order-cancel-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-cancel-dialog/order-cancel-dialog.component.html
@@ -79,7 +79,8 @@
                     </div>
                     <div class="row kt-padding-t-15">
                         <div class="col-5 align-self-center">
-                            <label [class.mandatory]="isMandatory">Cancellation Charges</label>
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Cancellation
+                                Charges</label>
                         </div>
                         <div class="col-7">
                             <input class="form-control" formControlName="cancellationCharges" type="text" numbersOnly
@@ -108,7 +109,7 @@
                     </div>
                     <div class="row kt-padding-t-15">
                         <div class="col-5 align-self-center">
-                            <label [class.mandatory]="isMandatory">Bank Name</label>
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Bank Name</label>
                         </div>
                         <div class="col-7">
                             <input class="form-control" formControlName="customerBankName" type="text"
@@ -121,7 +122,8 @@
                     </div>
                     <div class="row kt-padding-t-15">
                         <div class="col-5 align-self-center">
-                            <label [class.mandatory]="isMandatory">Account Number</label>
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Account
+                                Number</label>
                         </div>
                         <div class="col-7">
                             <input class="form-control" formControlName="customerAccountNo" type="text" numbersOnly
@@ -134,7 +136,7 @@
                     </div>
                     <div class="row kt-padding-t-15">
                         <div class="col-5 align-self-center">
-                            <label [class.mandatory]="isMandatory">IFSC Code</label>
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">IFSC Code</label>
                         </div>
                         <div class="col-7">
                             <input class="form-control" formControlName="ifscCode" type="text"
