--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
@@ -211,7 +211,7 @@
                             <input type="text" formControlName="utrNumber" class="form-control">
                         </div>
                     </div>
-                    <div class="row kt-margin-t-15">
+                    <div class="row kt-margin-t-15" *ngIf="hiddenFlag">
                         <div class="col-4 align-self-center">
                             <label class="font-weight-500 text-color">Status</label>
                         </div>
