--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-edit/product-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-edit/product-edit.component.html
@@ -151,13 +151,13 @@
         <div class="row py-2">
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">SKU Code:</div>
+                    <div class="col-6 text-muted">SKU Code :</div>
                     <div class="col-6">{{productData?.sku}}</div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Product Name:</div>
+                    <div class="col-6 text-muted">Product Name :</div>
                     <div class="col-6">{{productData?.productName}}</div>
                 </div>
             </div>
@@ -165,13 +165,13 @@
         <div class="row py-2">
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Category:</div>
+                    <div class="col-6 text-muted">Category :</div>
                     <div class="col-6">{{productData?.subCategory?.category?.categoryName | titlecase}}</div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Sub Category:</div>
+                    <div class="col-6 text-muted">Sub-Category :</div>
                     <div class="col-6">{{productData?.subCategory?.subCategoryName | titlecase}}</div>
                 </div>
             </div>
@@ -179,13 +179,13 @@
         <div class="row py-2">
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Weight (gm):</div>
+                    <div class="col-6 text-muted">Weight (gm) :</div>
                     <div class="col-6">{{productData?.weight}}</div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Price:</div>
+                    <div class="col-6 text-muted">Price :</div>
                     <div class="col-6">{{productData?.productPrice[0]?.finalProductPrice}}</div>
                 </div>
             </div>
@@ -193,13 +193,13 @@
         <div class="row py-2">
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Manufacturing Charges:</div>
+                    <div class="col-6 text-muted">Manufacturing Charges :</div>
                     <div class="col-6">{{productData?.manufacturingCostPerGram}}</div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Shipping Charges:</div>
+                    <div class="col-6 text-muted">Shipping Charges :</div>
                     <div class="col-6">{{productData?.shipping}}</div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
         <div class="row py-2">
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Hallmarking & Packaging Charges:</div>
+                    <div class="col-6 text-muted">Hallmarking & Packaging Charges :</div>
                     <div class="col-6">{{productData?.hallmarkingPackaging}}</div>
                 </div>
             </div>
