--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
@@ -69,7 +69,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="subCategory">
-                    <mat-header-cell *matHeaderCellDef>Sub Category</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Sub-Category</mat-header-cell>
                     <mat-cell *matCellDef="let element">{{element?.subCategory?.subCategoryName | titlecase}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="weight">
