filter and assign appraiser

--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
@@ -1,4 +1,4 @@
-<!-- <p>applied-kyc works!</p> -->
+<kt-filtered-data [filteredList]="filteredDataList"></kt-filtered-data>
 <kt-portlet>
     <kt-portlet-body>
         <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'auto'}">
