bhushan: minor changes

--- a/gold-admin-frontend/src/app/views/pages/settings/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/pages/settings/global-settings/global-settings.component.html
@@ -2,7 +2,7 @@
     <kt-portlet-body class="">
         <div class="col-8 mx-auto parent-container">
 
-            <div class="row kt-padding-t-20 " [formGroup]="ltvGoldPercentForm">
+            <div class="row kt-padding-t-30 " [formGroup]="ltvGoldPercentForm">
                 <div class="col-8">
                     <div class="row">
                         <div class="col-6 form-label text-color d-flex align-items-center" placeholder="">LTV gold
@@ -22,7 +22,7 @@
                 </div>
             </div>
 
-            <div class="row kt-padding-t-20 " [formGroup]="minimumLoanAmountForm">
+            <div class="row kt-padding-t-30 " [formGroup]="minimumLoanAmountForm">
                 <div class="col-8">
                     <div class="row">
                         <div class="col-6 form-label text-color d-flex align-items-center" placeholder="">Minimum
@@ -43,7 +43,7 @@
                 </div>
             </div>
 
-            <div class="row kt-padding-t-20 " [formGroup]="minimumTopUpAmountForm">
+            <div class="row kt-padding-t-30 " [formGroup]="minimumTopUpAmountForm">
                 <div class="col-8">
                     <div class="row">
                         <div class="col-6 form-label text-color d-flex align-items-center" placeholder="">Minimum
@@ -63,7 +63,7 @@
                 </div>
             </div>
 
-            <div class="row kt-padding-t-20 " [formGroup]="gracePeriodForm">
+            <div class="row kt-padding-t-30 " [formGroup]="gracePeriodForm">
                 <div class="col-8">
                     <div class="row">
                         <div class="col-6 form-label text-color d-flex align-items-center" placeholder="">Grace
@@ -84,7 +84,7 @@
                 </div>
             </div>
 
-            <div class="row kt-padding-t-20 kt-padding-t-30" [formGroup]="gstForm">
+            <div class="row kt-padding-t-30 kt-padding-b-30" [formGroup]="gstForm">
                 <div class="col-8">
                     <div class="row">
                         <div class="col-6 form-label text-color d-flex align-items-center">GST (%)
