--- a/gold-admin-frontend/src/app/views/pages/upload-data/gold-rate/gold-rate.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/gold-rate/gold-rate.component.html
@@ -2,7 +2,7 @@
     <kt-portlet-body>
         <div class="row kt-padding-t-20 ">
             <div class="col-3 form-label" placeholder="">
-                <label for="" class="mandatory">Upload Gold Rate</label>
+                <label for="" class="mandatory kt-padding-l-10">Upload Gold Rate</label>
             </div>
             <div class="col-3 per-gram align-items-center">
                 <input type="text" class="form-control" numbersOnly [formControl]="goldRate"
