--- a/gold-admin-frontend/src/app/views/partials/components/button/button.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/button/button.component.html
@@ -4,3 +4,5 @@
     (click)="actionPerformed()">{{value | titlecase}}</button>
 <button *ngIf="type == 'button'" mat-raised-button color="primary" [ngClass]="myClass" [disabled]="isDisabled"
     class="submit" [type]="type" (click)="actionPerformed()">{{value | titlecase}}</button>
+<button *ngIf="type == 'normalButton'" mat-raised-button color="primary" [ngClass]="myClass" [disabled]="isDisabled"
+    class="submit" [type]="type" (click)="actionPerformed()">{{value}}</button>
